[package]
name = "esp32-rgb-led-rmt"
version = "0.1.0"
authors = ["procrastimax <mmeheykeroth@protonmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
rgb = "0.8.36"


[build-dependencies]
embuild = "0.30.4"
